// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return 200 and return logged user 1`] = `
Object {
  "data": Object {
    "me": Object {
      "name": "Danilo",
    },
  },
}
`;

exports[`should return 200 but user not logged since is a request only with domainname 1`] = `
Object {
  "data": Object {
    "me": null,
  },
}
`;

exports[`should return errors for authorization and domainname null 1`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "message": "Invalid session",
      "severity": "WARNING",
    },
  ],
}
`;

exports[`should return errors for user not existent 1`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "message": "Invalid session",
      "severity": "WARNING",
    },
  ],
}
`;

exports[`should return errors for user without team 1`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "message": "Invalid session",
      "severity": "WARNING",
    },
  ],
}
`;

exports[`should return errors if domain name is null 1`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "message": "Invalid session",
      "severity": "WARNING",
    },
  ],
}
`;

exports[`should return errors if domain name not exist 1`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "message": "Invalid session",
      "severity": "WARNING",
    },
  ],
}
`;
